reduce width of text inputs to prevent overlap with the diagram

--- a/src/fretfind.css
+++ b/src/fretfind.css
@@ -50,3 +50,6 @@ table.foundfrets td {
 .help dd {
     padding-left: 10px;
 }
+input {
+    width: 100px;
+}
